[Fixes #18083601] Affiliate boosted content title/url text on index page should wrap

--- a/app/stylesheets/new_main.sass
+++ b/app/stylesheets/new_main.sass
@@ -1319,6 +1319,7 @@ h3.api-item
   td
     border: 1px solid #A9A9A9
     padding: 4px 8px
+    word-wrap: break-word
     &.empty
       text-align: center
     &.publish-date, &.status
